ipc/ipdl/test/ipdl/error/trans_WrongDirection3.ipdl
sync protocol trans_WrongDirection3 {

parent:
    sync Msg();

state S1:
    send Msg goto S1;

};
